Added files & directories to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,16 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+
+# Boostrap compiled CSS & JavaScript directory
+dist
+
+# Jekyll compiled directory
+.sass-cache
+_site
+
+# Ruby dependencies file
+Gemfile.lock
+
+# OS X Desktop Services Store file
+.DS_Store
