--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "/openshift-workshops" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 # workshop-dir: www-offline
-twitter_username: ecwpz91
-github_username:  ecwpz91
+twitter_username: kyleabenson
+github_username:  kyle-benson
 
 # Build settings
 markdown: kramdown
